# oceandl

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmake/: oceandl_install_bundle.cmake.in
cpp/include/oceandl/: catalog.hpp  cli.hpp  config.hpp  copernicusmarine.hpp  downloader.hpp  http_client.hpp  models.hpp  process_runner.hpp  reporter.hpp  utils.hpp  validation.hpp  version.hpp
cpp/include/oceandl/providers/: base.hpp  psl.hpp  registry.hpp
cpp/src/: builtin_datasets.cpp  builtin_datasets.hpp  catalog.cpp  cli.cpp  cli_support.cpp  cli_support.hpp  config.cpp  copernicusmarine.cpp  download_command.cpp  download_command.hpp  download_lock.cpp  download_lock.hpp  download_resume.cpp  download_resume.hpp  downloader.cpp  http_client.cpp  main.cpp  models.cpp  process_runner.cpp  reporter.cpp  target_download_executor.cpp  target_download_executor.hpp  utils.cpp  validation.cpp
cpp/src/providers/: base.cpp  psl.cpp  registry.cpp
cpp/tests/: hermetic_http_integration.py  test_main.cpp
packaging/arch/oceandl/: .SRCINFO  PKGBUILD  README.md
problems/: problem1.md  problem2.md  problem3.md  problem4.md  problem5.md  problem6.md  problem7.md  problem8.md
scripts/: create_source_release.sh  verify_arch_pkgbuild.sh  verify_release_archive.ps1  verify_release_archive.sh
